Fix show track on ie

--- a/_sass/_controls.scss
+++ b/_sass/_controls.scss
@@ -39,8 +39,6 @@
 
 input[type=range] {
     -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none; 
     height: 28px;
     background: none; 
 
@@ -50,8 +48,6 @@ input[type=range] {
 
     &::-webkit-slider-thumb{
         -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none; 
         width: 14px;
         height: 26px;
         margin-top: -10px;
@@ -60,6 +56,12 @@ input[type=range] {
     }
 
     &::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 1px;
+        background: $text-color;
+    }
+
+     &::-ms-track {
         width: 100%;
         height: 1px;
         background: $text-color;
